tests/semantics/invalid/non_int_vec_index.s23
int vec[3] 0 1 2;

int main();

code main {
    vec['0'] = 0;
    vec[2.0] = 2;
    print vec['1'];
    print vec[0.0];
}